--- a/MovieApp/View/MainForm.resx
+++ b/MovieApp/View/MainForm.resx
@@ -117,4 +117,51 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAGBgAAAEAIACICQAAFgAAACgAAAAYAAAAMAAAAAEAIAAAAAAAAAkAACMuAAAjLgAAAAAAAAAA
+        AACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICAgAB/f38Af4CAAHx6
+        eBZeSzb3WkMt+nBmXTmDhokAfn59A4CAgAB/f38AgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICA
+        gACAgIAAgICAAICAgACAgIAAgICAAICAgAB+fn4BgIGBAHt5dxldSDP/Xkk0/FtFL+txaWA6goSGAH5+
+        fQOAgIAAf3+AAICAgAB/f38AgICAAH9/fwF/f38Bf39/AX9/fwF/f38Bf39/AX9/fwF/f38Bf39/AX9/
+        fwJ+fn4Cfn9/A3x8ewhgTju0XEYw/11JNf9bRC7scmlhOoKDhQB+fn0DgICAAH9/fwCAgIAAf39/AIKC
+        ggCDg4MAg4ODAIODgwCDg4MAg4ODAIODgwCDg4MAg4ODAIODgwCDg4MAgoKCAISFhgB+fHkLXkw4tFxG
+        Mf9eSTX9W0Qu63FpYTqChIUAf35+AoCAgAB9fX0DhISEAC0tLaQXFxfRFxcXzhcXF9EXFxfRFxcX0RcX
+        F9EXFxfRFxcX0RcXF9AWFhbPFxcX0RwbG3dwcXEAg4B+Cl5LOLVbRjD/XUk1/ltFL+lxaF9EgYKEAn5+
+        fQN8fHwEhYWFABYWFtAAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8MCwp9b3BxAX58egtfTDi1XEYw/1xHMf9eSjabdW9oAIKFhwB9fX0DhISEABwcHMQAAAD9W1tbRnJy
+        ciJtbW0jbm5uIm5ubiJubm4ibm5uIm5ubiJubm4ibm5uIm9vbyRra2soc3JyAoOEhQB7eXcIX0w4vmBN
+        OalsYVQTXUgzrHBmXEp9fX0EhYWFABwcHMUAAAD/bW1tIomJiQCDg4MAhISEAISEhACEhIQAhISEAISE
+        hACEhIQAhISEAISEhACFhYUAgoKCAH5+fQGBgoMAend0CWhaTBpdSTTMW0Yw/1pELbt9fX0EhYWFABsb
+        G8YAAAD/aWlpK4ODgwF+fn4Cf39/AX9/fwF/f38Bf39/AX9/fwF/f38Bf39/AX9/fwF/f38Bf39/AICA
+        gAB+fn0BhIWGAH56dxNdSjbFX0w4tnt3dQR9fX0EhYWFABwcHMYAAAD/ampqKoWFhQB/f38BgICAAICA
+        gACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAH9/fwCDg4MAcHBvBG1ubwCKiYgAe3p4A4KD
+        hAB9fX0EhYWFABwcHMYAAAD/ampqKoWFhQB/f38BgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICA
+        gACAgIAAgICAAH5+fgCGhoYAY2NjLQ0NDI1VVVYYgYGCAH59fQF9fX0EhYWFABwcHMYAAAD/ampqKoWF
+        hQB/f38BgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAH9/fwGEhIQAa2trKwAA
+        AP8TEhK/hYWFAHx8fAR9fX0EhYWFABwcHMYAAAD/ampqKoWFhQB/f38BgICAAICAgACAgIAAgICAAICA
+        gACAgIAAgICAAICAgACAgIAAgICAAH9/fwCFhYUAaWlpKQAAAPweHh7IhISEAH19fQV9fX0EhYWFABwc
+        HMYAAAD/ampqKoWFhQB/f38BgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAH9/
+        fwGFhYUAampqKgAAAP4cHBzFhYWFAH19fQR9fX0EhYWFABwcHMYAAAD/ampqKoWFhQB/f38BgICAAICA
+        gACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAH9/fwGFhYUAampqKgAAAP8cHBzGhYWFAH19
+        fQV9fX0EhYWFABsbG8YAAAD/aWlpK4ODgwF+fn4Cf39/AX9/fwF/f38Bf39/AX9/fwF/f38Bf39/AX9/
+        fwF/f38Bf39/AX5+fgKDg4MBaWlpKwAAAP8bGxvGhYWFAH19fQV9fX0EhYWFABwcHMUAAAD/bW1tIomJ
+        iQCDg4MAhISEAISEhACEhIQAhISEAISEhACEhIQAhISEAISEhACEhIQAhISEAIODgwCJiYkAbW1tIgAA
+        AP8cHBzFhYWFAH19fQV9fX0DhISEABwcHMQAAAD9W1tbRnJyciJtbW0jbm5uIm5ubiJubm4ibm5uIm5u
+        biJubm4ibm5uIm5ubiJubm4ibm5uIm1tbSNycnIiW1tbRgAAAP0cHBzEhISEAH19fQR8fHwEhYWFABYW
+        FtAAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8WFhbQhYWFAHx8fAV9fX0DhISEAC0tLaQXFxfRFxcXzhcXF9EXFxfRFxcX0RcX
+        F9EXFxfRFxcX0RcXF9EXFxfRFxcX0RcXF9EXFxfRFxcX0RcXF9EXFxfRFxcXzhcXF9EtLS2khISEAH19
+        fQSAgIAAf39/AIKCggCDg4MAg4ODAIODgwCDg4MAg4ODAIODgwCDg4MAg4ODAIODgwCDg4MAg4ODAIOD
+        gwCDg4MAg4ODAIODgwCDg4MAg4ODAIODgwCCgoIAf39/AICAgAB/f38AgICAAH9/fwF/f38Bf39/AX9/
+        fwF/f38Bf39/AX9/fwF/f38Bf39/AX9/fwF/f38Bf39/AX9/fwF/f38Bf39/AX9/fwF/f38Bf39/AX9/
+        fwF/f38BgICAAH9/fwCAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICA
+        gACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICA
+        gACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICAgACAgIAAgICAAICA
+        gACAgIAAgICAAICAgACAgIAAgICAAICAgAD//C8A//QXAMAACwD//gUAQAEAAEAAAwBAAEAAR/+gAEAA
+        0ABF/+0ARf/iAEX/ogBF/+IARf+iAEX/ogBAAAIAR//iAEAAAgBAAAIAQAACAP///wDAAAMA////AP//
+        /wA=
+</value>
+  </data>
 </root>
